<resources>
    <string name="app_name">Omadre</string>
    <string name="by_email_id">By Email ID</string>
    <string name="by_phone_no">By Phone No</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dob">DOB</string>
    <string name="dd">DD</string>
    <string name="yyyy">YYYY</string>
    <string name="mm">MM</string>
    <string name="submit">submit</string>
    <string name="user_id">User ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_navigation_drawer">Omadre</string>
    <string name="username_here">Enter Username Here</string>
    <string name="password_here">Enter Password Here</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="order_barcode">ORDER BARCODE</string>
    <string name="record">RECORD</string>
    <string name="feed">FEED</string>
    <string name="help">HELP</string>
    <string name="home">HOME</string>
    <string name="notification">NOTIFICATION</string>
    <string name="title_activity_bottom_navigation">HOME</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="number_of_times_you_pump_breast_milk_daily">Number of times you pump breast milk daily</string>
    <string name="trial_offer_n_5">Trial Offer  \n %s €</string>
    <string name="monthly_offer_n_15">Monthly Payment  \n %s €</string>
    <string name="one_time_use">One Time Use</string>
    <string name="pay_one_time_annual">Pay One Time / Annual</string>
    <string name="swipe_to_pay">Swipe To Pay</string>
    <string name="start">Start</string>
    <string name="both_breast">both breast</string>
    <string name="left_breast">left breast</string>
    <string name="right_breast">right breast</string>
    <string name="stop">Stop</string>
    <string name="scan_barcode">scan barcode</string>
    <string name="quantity">Quantity : </string>
    <string name="ml">ml</string>
    <string name="prepare_feed_nstore_again">Prepare + Feed+ \n Store Again</string>
    <string name="email_support">Email Support</string>
    <string name="call_support">Call Support</string>
    <string name="mother_login">Mother Login</string>
    <string name="email_mother">Email</string>
    <string name="login">log in</string>
    <string name="sign_up">create omadre account</string>
    <string name="omadre_vida">Omadre Vida</string>
    <string name="invalid_email_id">Invalid Email ID</string>
    <string name="username_error">Username Can not left blank</string>
    <string name="password_error_msg">Password Can not left blank</string>
    <string name="date_error_msg">Date Cant Left Blank!</string>
    <string name="month_error_msg">Month Cant Left Blank!</string>
    <string name="year_error_msg">Year Cant Left Blank!</string>
    <string name="email_error_msg">Invalid Email ID</string>
    <string name="phone_number_err_msg">Invalid Phone Number</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="or">OR</string>
    <string name="why_use_omadre">WHY USE OMADRE</string>
    <string name="best_way_to_feed">BEST WAY TO FEED</string>
    <string name="how_to_order_more">HOW TO ORDER MORE</string>
    <string name="what_is_stats">WHAT IS STATS</string>
    <string name="how_to_record">HOW TO RECORD</string>
    <string name="how_to_feed">HOW TO FEED</string>
    <string name="sign_up_txt">sign up</string>
    <string name="address">Address</string>
    <string name="debit_card_online_payment">Debit Card / Online Payment</string>
    <string name="pay">pay</string>
    <string name="trial">trial</string>
    <string name="monthly">monthly</string>
    <string name="address_err">Address Cant Left Blank!</string>
    <string name="please_enter_milk_quantity">Enter Milk Quantity</string>
    <string name="barcode_attached">Barcode Attached</string>
    <string name="prepare">Prepare</string>
    <string name="store">Store</string>
    <string name="title_notification">Notification</string>
    <string name="start_feed">Start Feed</string>
    <string name="preparing">Preparing</string>
    <string name="prepared">Prepared</string>
    <string name="total_milk_quantity">milk quantity in ml</string>
    <string name="left_breast_quantity">Left Breast Quantity</string>
    <string name="right_breast_quantity">Right Breast Quantity</string>
    <string name="attach_barcode">Attach Barcode</string>
    <string name="enter_you_note_here">Notes(Optional)</string>
    <string name="save">save</string>
    <string name="reset">reset</string>
    <string name="null_value">null</string>
    <string name="enter_the_volume">Enter The Volume</string>
    <string name="submit_feed">Submit Feed</string>
    <string name="green_barcode">Right Barcode</string>
    <string name="red_barcode">Wrong Barcode</string>
    <string name="yellow_barcode">This bottle does\'t have enough milk \n Scan other bottle to add with this</string>
</resources>
