<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="presenter"
            type="com.android.omadre.activities.FeedActivity" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.android.omadre.activities.FeedActivity">

        <include layout="@layout/customized_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/fifteen_dp">

            <com.androidlib.CustomFontViews.CustomButtonRegular
                android:id="@+id/scanBarcodeBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_shadow_bg"
                android:onClick="@{()->presenter.onScanBarcodeClick()}"
                android:text="@string/scan_barcode"
                android:textColor="@color/white"
                android:textSize="@dimen/sixteen_sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.androidlib.CustomFontViews.CustomTextviewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:textColor="@color/black"
                    android:textSize="@dimen/eighteen_sp" />

                <com.androidlib.CustomFontViews.CustomEditTextRegular
                    android:id="@+id/quantityET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:layout_marginStart="@dimen/five_dp"
                    android:hint="@string/quantity"
                    android:inputType="numberDecimal"
                    android:minEms="6" />

                <com.androidlib.CustomFontViews.CustomTextviewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:layout_marginStart="@dimen/five_dp"
                    android:text="@string/ml"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen_sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.androidlib.CustomFontViews.CustomButtonRegular
                    android:id="@+id/prepareBT"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_secondary_bg"
                    android:enabled="false"
                    android:onClick="@{()->presenter.onPrepareClick()}"
                    android:text="@string/prepare"
                    android:textColor="@color/white" />


                <com.androidlib.CustomFontViews.CustomButtonRegular
                    android:id="@+id/storeBT"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_secondary_bg"
                    android:enabled="false"
                    android:onClick="@{()->presenter.onStoreClick()}"
                    android:text="@string/store"
                    android:textColor="@color/white" />
            </LinearLayout>


            <com.androidlib.CustomFontViews.CustomButtonRegular
                android:id="@+id/startFeedBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                android:background="@drawable/rounded_button_secondary_bg"
                android:enabled="false"
                android:onClick="@{()->presenter.onStartFeedClick()}"
                android:text="@string/start_feed"
                android:textColor="@color/white" />


            <com.androidlib.CustomFontViews.CustomTextviewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_shadow_bg"
                android:gravity="center"
                android:paddingBottom="@dimen/thirty_dp"
                android:paddingTop="@dimen/thirty_dp"
                android:text="@string/prepare_feed_nstore_again"
                android:textColor="@color/white"
                android:textSize="@dimen/twenty_two_sp"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
</layout>