<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="presenter"
            type="com.android.omadre.activities.SignupActivity" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        >

        <include layout="@layout/customized_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/toolbar"
            android:padding="@dimen/ten_dp">

            <android.support.v7.widget.CardView
                android:id="@+id/emailCV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <com.androidlib.CustomFontViews.CustomTextviewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="@{() -> presenter.onEmailClick()}"
                    android:padding="@dimen/ten_dp"
                    android:text="@string/by_email_id"
                    android:textColor="@color/white"
                    android:textSize="@dimen/eighteen_sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/phoneCV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/secondary_color"
                android:layout_weight="1"
                android:onClick="@{() -> presenter.onPhoneNumberClick()}"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <com.androidlib.CustomFontViews.CustomTextviewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/ten_dp"
                    android:textColor="@color/white"
                    android:text="@string/by_phone_no"
                    android:textSize="@dimen/eighteen_sp" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"

            android:padding="@dimen/fifteen_dp">

            <com.androidlib.CustomFontViews.CustomTextviewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:padding="@dimen/two_dp"
                android:text="@string/user_id"
                android:textColor="@color/solid_black"
                android:textSize="@dimen/sixteen_sp" />


            <com.androidlib.CustomFontViews.CustomEditTextRegular
                android:id="@+id/emailOrNumberET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_white_bg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/ten_dp"
                android:textColor="@color/solid_black"
                android:textSize="@dimen/sixteen_sp" />


            <com.androidlib.CustomFontViews.CustomTextviewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:padding="@dimen/two_dp"
                android:text="@string/password"
                android:textColor="@color/solid_black"
                android:textSize="@dimen/sixteen_sp" />

            <com.androidlib.CustomFontViews.CustomEditTextRegular
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_white_bg"
                android:hint="@string/password"
                android:inputType="textPassword"

                android:padding="@dimen/ten_dp"
                android:textColor="@color/solid_black"
                android:textSize="@dimen/sixteen_sp" />


            <com.androidlib.CustomFontViews.CustomTextviewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:padding="@dimen/two_dp"
                android:text="@string/dob"
                android:textColor="@color/solid_black"
                android:textSize="@dimen/sixteen_sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.androidlib.CustomFontViews.CustomEditTextRegular
                    android:id="@+id/dateET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/two_dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_white_bg"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:maxLines="2"
                    android:maxLength="2"
                    android:nextFocusForward="@+id/monthET"
                    android:hint="@string/dd"
                    android:inputType="number"
                    android:padding="@dimen/ten_dp"
                    android:textSize="@dimen/sixteen_sp" />

                <com.androidlib.CustomFontViews.CustomEditTextRegular
                    android:id="@+id/monthET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/two_dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_white_bg"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLines="2"
                    android:maxLength="2"
                    android:nextFocusForward="@+id/yearET"
                    android:imeOptions="actionNext"
                    android:hint="@string/mm"
                    android:padding="@dimen/ten_dp"
                    android:textSize="@dimen/sixteen_sp" />

                <com.androidlib.CustomFontViews.CustomEditTextRegular
                    android:id="@+id/yearET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/two_dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_white_bg"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="number"

                    android:maxLength="4"

                    android:hint="@string/yyyy"
                    android:padding="@dimen/ten_dp"
                    android:textSize="@dimen/sixteen_sp" />

            </LinearLayout>


            <com.androidlib.CustomFontViews.CustomButtonRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/thirty_dp"
                android:textSize="@dimen/eighteen_sp"
                android:textColor="@color/white"
                android:onClick="@{() -> presenter.onSubmitClick()}"
                android:background="@drawable/bottom_shadow_bg"
                android:text="@string/submit" />
        </LinearLayout>

    </RelativeLayout>

</layout>
